--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ isort==5.12.0
 load-dotenv==0.1.0
 mccabe==0.7.0
 Pillow==9.5.0
-psycopg2==2.9.6
+psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pyflakes==3.0.1
 python-dotenv==1.0.0
